--- a/src/components/Banner.css
+++ b/src/components/Banner.css
@@ -5,7 +5,8 @@
 }
 
 .banner__contents {
-  margin-left: 30px;
+  margin-left: 20px;
+  margin-right: 20px;
   padding-top: 140px;
   height: 190px;
 }
@@ -39,12 +40,22 @@
 }
 
 .banner__description {
-  width: 45rem;
+  width: 100%;
   line-height: 1.3;
   padding-top: 1rem;
   font-size: 1.1rem;
   max-width: 460px;
   height: 80px;
+}
+
+@media only screen and (min-width: 768px) {
+  .banner__description {
+    width: 45rem;
+  }
+  .banner__contents {
+    margin-left: 30px;
+    margin-right: 30px;
+  }
 }
 
 .banner--fadeBottom {
