--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -6,6 +6,11 @@
   padding: 1rem;
   height: 30px;
   z-index: 3;
+  background-image: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0.7) 10%,
+    rgba(0, 0, 0, 0)
+  );
 
   display: flex;
   justify-content: space-between;
