--- a/src/components/Row.css
+++ b/src/components/Row.css
@@ -14,7 +14,7 @@
 }
 
 .row__poster {
-  width: 100%;
+  /* width: 100%; */
   object-fit: contain;
   margin-right: 10px;
   max-height: 144px;
@@ -47,7 +47,7 @@
   top: 15px;
   height: 100%;
   width: calc(var(--swiper-navigation-size) / 44 * 40);
-  height: calc(100% - 39px);
+  height: calc(100% - 35px);
   margin-top: 0;
   z-index: 10;
   cursor: pointer;
@@ -55,13 +55,21 @@
   align-items: center;
   justify-content: center;
   color: var(--swiper-navigation-color, var(--swiper-theme-color));
-  /* background: rgba(20, 20, 20, 0.5); */
   background-image: linear-gradient(
     180deg,
     transparent,
     rgba(37, 37, 37, 0.61),
     #111
   );
+}
+
+@media only screen and (max-width: 767px) {
+  .swiper-button-next,
+  .swiper-button-prev {
+    opacity: 0;
+    cursor: auto;
+    pointer-events: none;
+  }
 }
 
 .swiper-button-prev,
@@ -96,4 +104,14 @@
   opacity: 0;
   cursor: auto;
   pointer-events: none;
+}
+
+.swiper-slide {
+  width: auto;
+  height: 144px;
+}
+
+.row__postersLarge .swiper-slide {
+  width: auto;
+  height: 250px;
 }
