--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -3,7 +3,7 @@
   top: 0;
   right: 0;
   left: 0;
-  padding: 1rem;
+  padding: 1rem 4%;
   height: 30px;
   z-index: 3;
   background-image: linear-gradient(
@@ -23,9 +23,9 @@
 }
 
 .nav__logo {
-  height: 30px;
+  height: 35px;
 }
 
 .nav__avatar {
-  height: 30px;
+  height: 35px;
 }
